--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.4.5",
     "hardhat-ethers": "^1.0.1",
     "hardhat-waffle": "^0.0.1-security",
+    "ipfs-car": "~0.7.0",
     "mocha": "^10.1.0",
+    "nft.storage": "^7.1.1",
     "rxjs": "~7.5.0",
     "schematics-scss-migrate": "^1.3.15",
     "solidity-docgen": "^0.6.0-beta.34",
