--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.4.5",
     "hardhat-ethers": "^1.0.1",
+    "hardhat-gas-reporter": "^2.2.0",
     "hardhat-waffle": "^0.0.1-security",
     "ipfs-car": "~0.7.0",
     "mocha": "^10.1.0",
