add mainnets configs

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,7 @@ ZK_API_KEY_URL=https://polygonzkevm-cardona.g.alchemy.com/v2/<KEY>
 NEON_WALLET_PRIVATE_KEY=<KEY>
 
 COINMARKET_API_KEY=<KEY>
+
+ETH_MMAINNET_API_KEY_URL=https://eth-mainnet.g.alchemy.com/v2/<KEY>
+
+ZK_MMAINNET_API_KEY_URL=https://polygonzkevm-mainnet.g.alchemy.com/v2/<KEY>
