--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,13 @@
-WALLET_PRIVATE_KEY=<YOUR_METAMASK_PRIVATE_KEY>
-QUICKNODE_API_KEY_URL=https://fluent-wispy-sanctuary.ethereum-goerli.discover.quiknode.pro/<API_KEY>
-ALCHEMY_API_KEY=<ALCHEMY_API_KEY>
-ALCHEMY_API_URL=https://eth-goerli.g.alchemy.com/v2/<ALCHEMY_API_KEY>
-ALCHEMY_MUMBAI_API_KEY=https://polygon-mumbai.g.alchemy.com/v2/<POLYGON_API_KEY>
+WALLET_PRIVATE_KEY=<KEY>
+SEPOLIA_API_KEY_URL=https://eth-sepolia.g.alchemy.com/v2/<KEY>
+
+ZK_WALLET_PRIVATE_KEY=<KEY>
+ZK_API_KEY_URL=https://polygonzkevm-cardona.g.alchemy.com/v2/<KEY>
+
+NEON_WALLET_PRIVATE_KEY=<KEY>
+
+COINMARKET_API_KEY=<KEY>
+
+ETH_MMAINNET_API_KEY_URL=https://eth-mainnet.g.alchemy.com/v2/<KEY>
+
+ZK_MMAINNET_API_KEY_URL=https://polygonzkevm-mainnet.g.alchemy.com/v2/<KEY>
