--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     "@angular/compiler-cli": "^14.2.0",
     "@compodoc/compodoc": "^1.1.19",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.4",
     "@types/jasmine": "~4.0.0",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^18.11.10",
     "angular-cli-ghpages": "^1.0.5",
     "chai": "^4.3.7",
@@ -59,6 +64,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "solidity-coverage": "^0.8.1",
+    "typechain": "^8.1.0",
     "typescript": "~4.7.2"
   }
 }
